[gd_scene load_steps=11 format=3 uid="uid://b4q8c4e5m6n7p"]

[ext_resource type="Script" uid="uid://05t4gq4bkj71" path="res://Navigation/Examples/test_navigation.gd" id="1_n4m5p"]
[ext_resource type="PackedScene" path="res://Navigation/Examples/test_monster.tscn" id="2_b05e2"]

[sub_resource type="BoxMesh" id="BoxMesh_u8v2r"]
size = Vector3(30, 0.5, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_k7l2p"]
size = Vector3(30, 0.5, 30)

[sub_resource type="BoxMesh" id="BoxMesh_x6t4r"]
size = Vector3(2, 3, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_m8n3p"]
size = Vector3(2, 3, 2)

[sub_resource type="NavigationMesh" id="NavigationMesh_yj6k8"]
agent_height = 2.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l4n2p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q8n3r"]

[sub_resource type="SphereMesh" id="SphereMesh_t5m6p"]
radius = 0.3
height = 0.6

[node name="TestNavigation" type="Node3D"]
script = ExtResource("1_n4m5p")
monster_scene = ExtResource("2_b05e2")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_u8v2r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_k7l2p")

[node name="Obstacles" type="Node3D" parent="."]

[node name="Obstacle1" type="StaticBody3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.5, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacles/Obstacle1"]
mesh = SubResource("BoxMesh_x6t4r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/Obstacle1"]
shape = SubResource("BoxShape3D_m8n3p")

[node name="Obstacle2" type="StaticBody3D" parent="Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1.5, 2)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Obstacles/Obstacle2"]
mesh = SubResource("BoxMesh_x6t4r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstacles/Obstacle2"]
shape = SubResource("BoxShape3D_m8n3p")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_yj6k8")

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 8)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_l4n2p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_q8n3r")

[node name="NavigationManager" type="Node3D" parent="."]

[node name="RegionManager" type="Node3D" parent="."]

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="Point1" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)

[node name="Point2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)

[node name="Point3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10)

[node name="Debug" type="Node3D" parent="."]

[node name="PathVisualization" type="MeshInstance3D" parent="Debug"]
mesh = SubResource("SphereMesh_t5m6p")
skeleton = NodePath("../..")
